--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
             {
                 color: black;
                 margin: 1px;
-                padding: 2px;
+                padding: 3px;
+                font-family: 'Courier New';
             }
             body
             {
@@ -16,10 +17,11 @@
         </style>
     </head>
     <body>
-            <h1> A Day In The Life of A Miller </h1>
-            <p> <p style="font-family: Arial"> 
+            <h1> <h1 style="text-align: center" h1> A Day In The Life of A Miller </h1>
+            <p> <p style="font-family: Courier New; font-size:18px;">
                 Join Mr. Michael Miller on his journey as he navigates teenagers, cats, and legos :D </p>
+            <p> <p style="font-family: Courier New; font-size: 18px;" > Who am I, you ask? Ok nobody asked but I'm gonna tell ya 
+                anyways :p</p>
             <img src = "loid5.jpeg" height = "360" width = "640" >
-            <p> <p style="font-family: Courier New" > Who am I, you ask? Ok nobody asked but I'm gonna tell ya anyways :p</p>
     </body>
 </html>
