--- a/cats.html
+++ b/cats.html
@@ -1,14 +1,54 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <style>
-            h1
-            {
-                color: black;
-                margin: 1px;
-                padding: 2px;
-                font-family: 'Times New Roman', Times, serif;
-            }
-        </style>
-    </head>
-</html>
+<head>
+	<title>Cat Directory</title>
+	<style>
+		.header 
+		{
+			background-color: transparent;
+			text-align: center;
+			padding: 5px;
+		  color: black;
+		}
+
+		.hor-navbar ul 
+		{
+		  list-style-type: none;
+          padding: 0px;
+		  overflow: hidden;
+		  background-color: transparent;
+		}
+		
+		.hor-navbar ul li 
+		{
+		  float: left;
+		}
+		
+		.hor-navbar ul li a 
+		{
+		  display: block;
+		  color: black;
+			padding: 5px;
+		  text-decoration: none;
+		}
+	</style>
+</head>
+
+<body style ="background-image: url(https://wallpaperaccess.com/full/1295661.png); background-size: cover;">
+
+	<div class='hor-navbar'>
+		<ul>
+			<li><a class='active' href='index.html'>Home</a></li>
+			<li><a class='active' href='cats.html'>Cat Directory</a></li>
+			<li><a class='active' href='legos.html'>Lego Directory</a></li>
+			<li><a class='active' href='story.html'>His Story</a></li>
+		</ul>
+	</div>
+	
+	<div class='header'>
+		<h1 style = "font-size: 40px;">Miller's Meows</h1>
+	</div>
+    <p style = "font-family: 'Courier New', Courier, monospace; font-size: 20px; text-align:end; padding-right: 20px;"> I'm a dog person but Mr. Miller and my partner are both cat people.</p>
+    <p style = "font-family: 'Courier New', Courier, monospace; font-size: 20px; text-align:end; padding-right: 20px;"> Hmm... everyone knows dogs are better but whatever I guess :/ </p>
+    <img src = "img_6188.jpeg" height = "400" width = "266.67" style = "text-align:start; padding-left: 50px;">
+    <p style =  "font-family: 'Courier New', Courier, monospace; font-size: 20px; text-align: start; padding-left: 48px;">Charlie is the grumpy zebra and Ziggy is the mini tiger!</p>
+    <p style =  "font-family: 'Courier New', Courier, monospace; font-size: 20px; text-align: start; padding-left: 48px;">/ᐠ. ｡.ᐟ\ᵐᵉᵒʷˎˊ˗ Both are domestic short-haired cats :p</p>
+</body>
