--- a/index.html
+++ b/index.html
@@ -2,26 +2,66 @@
 <html>
 
     <head>
+    <title>Home</title>
         <style>
-            h1
+            .header 
             {
+                background-color: transparent;
+                text-align: left;
+                padding: 10px;
                 color: black;
-                margin: 1px;
-                padding: 3px;
-                font-family: 'Courier New';
             }
-            body
+        
+            .hor-navbar ul 
             {
-                background-image: linear-gradient(to right, rgb(246, 211, 173), rgb(245, 189, 176));
+                list-style-type: none;
+                padding: 0px;
+                overflow: hidden;
+                background-color: transparent;
+            }
+
+            .hor-navbar ul li 
+            {
+                float: left;
+            }
+
+            .hor-navbar ul li a 
+            {
+                display: block;
+                color: black;
+                padding: 10px;
+                text-decoration: none;
+            }
+        
+            .content 
+            {
+                padding: 10px;
+            }
+
+            .img-container 
+            {
+                text-align: center;
             }
         </style>
     </head>
+
+    <body style = 'background-image: linear-gradient(to right, rgb(246, 211, 173), rgb(245, 189, 176)); '>
     <body>
-            <h1> <h1 style="text-align: center" h1> A Day In The Life of A Miller </h1>
-            <p> <p style="font-family: Courier New; font-size:18px;">
+        <div class = 'hor-navbar' >
+            <ul>
+                <li><a class ='active' href ='index.html' >Home</a></li>
+                <li><a class ='active' href ='cats.html' >Cat Directory</a></li>
+                <li><a class ='active' href ='legos.html' >Lego Directory</a></li>
+                <li><a class='active' href='story.html'>His Story</a></li>
+            </ul>
+        </div>
+            <h1> <h1 style = "text-align: center" h1> A Day In The Life of A Miller </h1>
+            <p> <p style = "text-align:center; font-family: Courier New; font-size:18px;">
                 Join Mr. Michael Miller on his journey as he navigates teenagers, cats, and legos :D </p>
-            <p> <p style="font-family: Courier New; font-size: 18px;" > Who am I, you ask? Ok nobody asked but I'm gonna tell ya 
-                anyways :p</p>
-            <img src = "loid5.jpeg" height = "360" width = "640" >
+            <p> <p style = "text-align: center; font-family: Courier New; font-size: 18px;" > Who am I, you ask? Ok nobody asked but I'm gonna tell ya 
+                anyways :p </p>
+            <div class = "img-container"> 
+                <img src = "loid5.jpeg" height = "360" width = "640" alt = "Mr. Miller as Loid :3">
+            </div>
     </body>
 </html>
